--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -103,3 +103,47 @@
   font-weight: bold;
   text-decoration: none;
 }
+
+.input-field {
+  position: relative; /* Necessário para posicionar o ícone de forma absoluta */
+  margin-bottom: 20px; /* Ajuste conforme necessário */
+  width: 100%;
+}
+
+.input-field input {
+  width: 100%;
+  height: 40px;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, .2);
+  border-radius: 40px;
+  font-size: 1em;
+  color: #fff;
+  padding: 0 45px 0 20px; /* Aumente o padding à direita para acomodar o ícone */
+}
+
+.input-field input::placeholder {
+  color: rgba(255, 255, 255, .7);
+}
+
+.input-field .icon {
+  position: absolute;
+  right: 20px; /* Posição do ícone de usuário/cadeado */
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1.2em;
+  color: #fff;
+}
+
+/* NOVO CSS para o ícone de toggle de senha */
+.input-field .password-toggle {
+  position: absolute;
+  right: 45px; /* Ajuste a posição para não sobrepor o ícone do cadeado */
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1.2em;
+  color: #fff;
+  cursor: pointer; /* Indica que é clicável */
+  z-index: 2; /* Garante que o ícone de olho esteja acima do input e do cadeado */
+}
